Report complete, file structure altered; comments to be added

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 SARC/*
 Papers/*
-code/term2/__pycache__/
-code/sandbox/__pycache__/
+code/final/__pycache__/
+code/archive/sandbox/__pycache__/
 *.tex
 !project_report.tex
 *.toc
